--- a/map.html
+++ b/map.html
@@ -7,7 +7,7 @@
                  content="width=device-width">
    <script type="text/javascript"
       src="http://maps.google.com/maps/api/js?
-                      key=mykey&sensor=false">
+                    key=AIzaSyAT-9h6LYmGBq4RKK8LbSVrrF9Z3Co8bOc&sensor=false">
    </script> 
   </head>
   <body onload="GetMap()">
